fix deprecations