@@ -105,11 +105,11 @@ public class GluttonClient extends CrossrefClient {
             request.addListener(listener);
         synchronized(this) {
             Future<?> f = executorService.submit(new GluttonRequestTask<T>(this, request));
-            List<Future<?>> localFutures = this.futures.get(new Long(threadId));
+            List<Future<?>> localFutures = this.futures.get(Long.valueOf(threadId));
             if (localFutures == null)
                 localFutures = new ArrayList<Future<?>>();
             localFutures.add(f);
-            this.futures.put(new Long(threadId), localFutures);
+            this.futures.put(Long.valueOf(threadId), localFutures);
 //System.out.println("add request to thread " + threadId + " / current total for the thread: " +  localFutures.size());         
         }
     }
